# qOPDSbrowser

./: .gitignore  CMakeLists.txt  NEWS.md  README.md  qOPDSbrowser.conf  qOPDSbrowser.desktop  qOPDSbrowser.spec  qOPDSbrowser_en_US.ts
debian/: control  copyright
debian/source/: options
package/: deb.sh  rpm.sh  ubuntu.sh
package/deb/: Dockerfile.bookworm  Dockerfile.noble  Dockerfile.oracular  run.sh
package/rpm/: Dockerfile.fedora41  Dockerfile.redos80  run.sh
package/ubuntu/: Dockerfile  Dockerfile.noble  Dockerfile.oracular  run.sh
src/: dialogbookmarkadd.cpp  dialogbookmarkadd.h  dialogbookmarkadd.ui  dialogbookmarkedit.cpp  dialogbookmarkedit.h  dialogbookmarkedit.ui  dialogsettings.cpp  dialogsettings.h  dialogsettings.ui  downloadhistory.cpp  downloadhistory.h  downloadtablecontextmenu.cpp  downloadtablecontextmenu.h  feedparser.cpp  feedparser.h  feedparserviewmodel.cpp  feedparserviewmodel.h  filetypes.cpp  filetypes.h  helpers.cpp  helpers.h  icons.cpp  icons.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opdslist.cpp  opdslist.h  qOPDSbrowser.qrc  settings.cpp  settings.h  urlvalidator.cpp  urlvalidator.h
src/languages/: qOPDSbrowser_en.ts  qOPDSbrowser_ru.ts
